# wasm_rust_game

./: .gitignore  Cargo.toml  README.md  index.html  index.mjs  package-lock.json
engine/: Cargo.toml
engine/src/: camera.rs  collider.rs  lib.rs  physics.rs  transform.rs
engine/src/event/: mod.rs
engine/src/macros/: mod.rs
engine/src/render/: animation.rs  color.rs  image.rs  mod.rs  sprite.rs
log/: Cargo.toml
log/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs  vector.rs
script_lang/: Cargo.toml
script_lang/src/: lib.rs  var.rs
src/: context.rs  draw.rs  helper.rs  lib.rs  player.rs  render.rs  sprite.rs  transform.rs  vector.rs
src/engine/: collider.rs  mod.rs  physics.rs  render.rs  transform.rs
src/engine/render/: context.rs  mod.rs  render.rs  sprite.rs
src/engine_old/render/: context.rs  render.rs
src/math/: vector.rs
statics/blob.amdn/: project.xml
testing/: Cargo.toml
testing/src/: main.rs
