[package]
name = "engine"
version = "0.1.0"
authors = ["Olivier Lemoine <olivier@le-moine.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.15"
lazy_static = "1.4"
mashup = "0.1"

[dependencies.math]
path = "../math"

[dependencies.log]
path = "../log"

# [dependencies.script_lang]
# path = "../script_lang"